--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,5 +1,20 @@
+.cards-container{
+    background-color: lightgray;
+    padding: 3%;
+    border-radius: 3%;
+}
+.title{
+    display: flex;
+    align-items: center;
+}
+.title img{
+    height: 10%;
+    width: 10%;
+    margin-right: 1%;
+}
 .cards{
     gap: 1%;
+    padding-top: 5%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
